Pragmatic-Darker-Blue: fixed missing coloring for GTK file chooser file name input

--- a/Pragmatic-Darker-Blue/files/Pragmatic-Darker-Blue/gtk-3.22/gtk.css
+++ b/Pragmatic-Darker-Blue/files/Pragmatic-Darker-Blue/gtk-3.22/gtk.css
@@ -2446,6 +2446,15 @@ calendar {
 filechooser #pathbarbox {
   border-bottom: 1px solid rgba(217, 217, 217, 0.5); }
 
+filechooser box.search-bar {
+  color: #ded6d6;
+  background-color: #2f2f2f;
+  box-shadow: none;
+  border-width: 0 0 1px 0;
+  border-style: solid;
+  border-image: linear-gradient(to bottom, #2f2f2f, #1d1d1d) 1 0 1 0;
+}
+
 filechooserbutton:drop(active) {
   box-shadow: none;
   border-color: transparent; }
